examples/test/testpolicy15743.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15743
  namespace: namespace390
spec:
  podSelector:
    matchLabels:
      key27: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value47
          key23: value13
          key12: value4
      podSelector:
        matchLabels:
          key4: value47
          key19: value20
